--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href='https://fonts.googleapis.com/css?family=Andada&effect=shadow-multiple' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
     <title>Rishikesh Shinde</title>
   </head>
@@ -19,19 +20,20 @@
       </nav>
     </header>
     <main>
-      <section class="about">
-        <div class="head-img">
+      <section >
+        <div >
           <img
+          class="head-img"
             src="/assets/home-hero.svg"
-            width="400"
+            width="500"
             alt="deveoper-img"
           />
           <h2>
-            Hello, I am Rishikesh Shinde. <br />
+            Hello, I am <span> Rishikesh Shinde</span>. <br />
             The aspiring <span>Web App Developer.</span>
           </h2>
         </div>
-        <div class="intro">
+        <div  class="bg-change">
           <h3>About</h3>
           <p>
             I am <strong> 3<sup>rd</sup> year Computer Engineering</strong> aspirant. A person who
@@ -40,7 +42,7 @@
           </p>
         </div>
       </section>
-      <section>
+      <section class="normal-bg">
         <h3>Technologies I know.</h3>
         <div class="skills">
             <p>Here I have listed some of the technologies I am familiar with, most of them are related to <strong>Web Development</strong>  field.</p>
@@ -60,7 +62,7 @@
             <div class="node logo">
               <img class="logo-img" src="/assets/nodejs.svg" alt="nodejs-logo" />
               <figcaption>NodeJs</figcaption>
-            </div></div>
+            </div></div><br>
             <div class="technologies-logos">
             <div class="reactjs logo">
               <img class="logo-img" src="/assets/react.svg" alt="" />
@@ -81,14 +83,14 @@
           </div>
         </div></div>
       </section>
-      <section>
-          <div class="projects">
+      <section class="bg-change">
+          <div  >
               <h3>My Projects</h3>
-              <p>I have coded some pretty interesting <strong>web apps</strong> . I would like to show you those apps. I have showcased them on <a href="/project.html"><strong>project</strong></a> page. Please feel free to comment on my projects.</p>
+              <p>I have coded some pretty interesting <strong>web apps</strong> . I would like to show you those apps. I have showcased them on <a href="/project.html"><strong>project</strong></a> page. Please feel free to comment on my projects by contacting me.</p>
           </div>
-          <div class="project-btn"><button>Go to Projects</button></div>
+          <div><a href="/project.html"><button>Go to Projects</button></a></div>
       </section>
-      <section>
+      <section class="normal-bg">
           <div class="blogs">
               <h3>
                   My Blogs
@@ -96,7 +98,7 @@
               <p>I also like to write blogs on technical as well as non-technical things. In technical blogs I like to share my technical learnings and experiences on various project.</p>
           </div>
           <div class="blog-btn">
-              <button>Read Blogs</button>
+              <a href="/blog.html"><button>Read Blogs</button></a>
           </div>
       </section>
     </main>
