--- a/project.html
+++ b/project.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href='https://fonts.googleapis.com/css?family=Andada' rel='stylesheet'>
     <link rel="stylesheet" href="style.css" />
     <title>Rishikesh Shinde</title>
   </head>
@@ -22,14 +23,14 @@
       <section>
         <div class="project-intro">
           <div class="hero-img">
-            <img src="/assets/project-hero.svg" width="400" alt="project-img" />
+            <img src="/assets/project-hero.svg" width="375" alt="project-img" />
           </div>
           <h2>Here are my <span>Projects</span>.</h2>
         </div>
       </section>
       <section>
         <!-- Profit Loss Calculator -->
-        <article class="container container-center">
+        <article class="bg-change">
           <h3>Stockecker (Stock's Position Checker )</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark14 NeoGCamp</strong></small>
@@ -46,19 +47,19 @@
             Built with <strong>HTML</strong>,<strong> CSS</strong> and
             <strong>Vanilla JS</strong>.
           </p>
-          <div class="live-project-btn">
+          <div >
             <a href="https://stockecker.netlify.app/"
-              ><button>Live Project</button></a
+              ><button class="live-project-btn">Live Project</button></a
             >
           </div>
-          <div class="source-code-btn">
+          <div >
             <a href="https://github.com/rdshinde/stock-profit-loss-checker.git"
-              ><button>Source Code</button></a
+              ><button class="source-code-btn">Source Code</button></a
             >
           </div>
         </article>
         <!-- Is your birthday palindrome? -->
-        <article class="container container-center">
+        <article class="container normal-bg">
           <h3>Is your Birthday a Palindrome?</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark13 NeoGCamp</strong></small>
@@ -73,19 +74,19 @@
             Built with <strong>HTML</strong>,<strong> CSS</strong> and
             <strong>Vanilla JS</strong>.
           </p>
-          <div class="live-project-btn">
+          <div >
             <a href="https://is-your-birthday-palindrome-app.netlify.app/"
-              ><button>Live Project</button></a
+              ><button class="live-project-btn">Live Project</button></a
             >
           </div>
-          <div class="source-code-btn">
+          <div >
             <a href="https://github.com/rdshinde/is-birthday-palindrome.git"
-              ><button>Source Code</button></a
+              ><button class="source-code-btn">Source Code</button></a
             >
           </div>
         </article>
         <!-- Fun with Triangles -->
-        <article class="container container-center">
+        <article class="container bg-change">
           <h3>Fun With Triangles?</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark12 NeoGCamp</strong></small>
@@ -101,19 +102,19 @@
             Built with <strong>HTML</strong>,<strong> CSS</strong> and
             <strong>Vanilla JS</strong>.
           </p>
-          <div class="live-project-btn">
+          <div >
             <a href="https://fun-with-triangle-app.netlify.app/"
-              ><button>Live Project</button></a
+              ><button class="live-project-btn">Live Project</button></a
             >
           </div>
-          <div class="source-code-btn">
+          <div >
             <a href="https://github.com/rdshinde/fun-with-triangles.git"
-              ><button>Source Code</button></a
+              ><button class="source-code-btn">Source Code</button></a
             >
           </div>
         </article>
         <!-- Is your birthdate lucky? -->
-        <article class="container container-center">
+        <article class="container normal-bg">
           <h3>Is your Birthdate Lucky?</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark11 NeoGCamp</strong></small>
@@ -129,19 +130,19 @@
             Built with <strong>HTML</strong>,<strong> CSS</strong> and
             <strong>Vanilla JS</strong>.
           </p>
-          <div class="live-project-btn">
+          <div >
             <a href="https://is-your-birthdate-lucky-app.netlify.app/"
-              ><button>Live Project</button></a
+              ><button class="live-project-btn">Live Project</button></a
             >
           </div>
-          <div class="source-code-btn">
+          <div >
             <a href="https://github.com/rdshinde/is-your-birthday-luck-app.git"
-              ><button>Source Code</button></a
+              ><button class="source-code-btn">Source Code</button></a
             >
           </div>
         </article>
         <!-- cash counter -->
-        <article class="container container-center">
+        <article class="container bg-change">
           <h3>Cash Counter</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark10 NeoGCamp</strong></small>
@@ -155,19 +156,19 @@
             Built with <strong>HTML</strong>,<strong> CSS</strong> and
             <strong>Vanilla JS</strong>.
           </p>
-          <div class="live-project-btn">
+          <div >
             <a href="https://cash-change-counter.netlify.app/"
-              ><button>Live Project</button></a
+              ><button class="live-project-btn">Live Project</button></a
             >
           </div>
-          <div class="source-code-btn">
+          <div >
             <a href="https://github.com/rdshinde/cash-counter-app.git"
-              ><button>Source Code</button></a
+              ><button class="source-code-btn">Source Code</button></a
             >
           </div>
         </article>
         <!-- Maharshtrian Food Recommendation -->
-        <article class="container container-center">
+        <article class="container normal-bg">
           <h3>Maharshtrian Food Recommendation</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark09 NeoGCamp</strong></small>
@@ -180,18 +181,18 @@
             <span> <strong>Tech stack :</strong> </span>
             Built with <strong>ReactJs</strong>.
           </p>
-          <div class="live-project-btn">
-            <a href="https://t9nrk.csb.app/"><button>Live Project</button></a>
+          <div >
+            <a href="https://t9nrk.csb.app/"><button class="live-project-btn">Live Project</button></a>
           </div>
-          <div class="source-code-btn">
+          <div >
             <a
               href="https://github.com/rdshinde/react-food-recommendation-app.git"
-              ><button>Source Code</button></a
+              ><button class="source-code-btn">Source Code</button></a
             >
           </div>
         </article>
         <!-- Emoji Interpreter -->
-        <article class="container container-center">
+        <article class="container bg-change">
           <h3>Hand Gesture Emoji Interpreter</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark08 NeoGCamp</strong></small>
@@ -204,17 +205,17 @@
             <span> <strong>Tech stack :</strong> </span>
             Built with <strong>ReactJs</strong>.
           </p>
-          <div class="live-project-btn">
-            <a href="https://3d8jm.csb.app/"><button>Live Project</button></a>
+          <div >
+            <a href="https://3d8jm.csb.app/"><button class="live-project-btn">Live Project</button></a>
           </div>
-          <div class="source-code-btn">
+          <div >
             <a href="https://github.com/rdshinde/react-emoji-interpreter.git"
-              ><button>Source Code</button></a
+              ><button class="source-code-btn">Source Code</button></a
             >
           </div>
         </article>
         <!-- Yoda Translations -->
-        <article class="container container-center">
+        <article class="container normal-bg">
           <h3>Yoda Translator</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark07 NeoGCamp</strong></small>
@@ -228,19 +229,19 @@
             Built with <strong>HTML</strong>,<strong> CSS</strong> and
             <strong>Vanilla JS</strong>.
           </p>
-          <div class="live-project-btn">
+          <div >
             <a href="https://yoda-fun-translation.netlify.app/"
-              ><button>Live Project</button></a
+              ><button class="live-project-btn">Live Project</button></a
             >
           </div>
-          <div class="source-code-btn">
+          <div >
             <a href="https://github.com/rdshinde/yoda-fun-translation-app.git"
-              ><button>Source Code</button></a
+              ><button class="source-code-btn">Source Code</button></a
             >
           </div>
         </article>
         <!-- Minion Translations -->
-        <article class="container container-center">
+        <article class="container bg-change">
           <h3>Minion Translator</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark06 NeoGCamp</strong></small>
@@ -255,19 +256,19 @@
             Built with <strong>HTML</strong>,<strong> CSS</strong> and
             <strong>Vanilla JS</strong>.
           </p>
-          <div class="live-project-btn">
+          <div >
             <a href="https://minion-fun-translations.netlify.app/"
-              ><button>Live Project</button></a
+              ><button class="live-project-btn">Live Project</button></a
             >
           </div>
-          <div class="source-code-btn">
+          <div >
             <a href="https://github.com/rdshinde/minion-fun-translation-app.git"
-              ><button>Source Code</button></a
+              ><button class="source-code-btn">Source Code</button></a
             >
           </div>
         </article>
         <!-- Avenger Movies Quiz -->
-        <article class="container container-center">
+        <article class="container normal-bg">
           <h3>'Avenger Movies' Quiz</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark02 NeoGCamp</strong></small>
@@ -280,20 +281,20 @@
             <span> <strong>Tech stack :</strong> </span>
             Built with <strong>nodeJs</strong>.
           </p>
-          <div class="live-project-btn">
+          <div >
             <a
               href="https://replit.com/@RishikeshShinde/Play-Avengers-Quiz#index.js?embed=1&output=1"
-              ><button>Live Project</button></a
+              ><button class="live-project-btn">Live Project</button></a
             >
           </div>
-          <div class="source-code-btn">
+          <div >
             <a href="https://github.com/rdshinde/javascript-cli-quiz-2.git"
-              ><button>Source Code</button></a
+              ><button class="source-code-btn">Source Code</button></a
             >
           </div>
         </article>
         <!-- Do you really know me? -->
-        <article class="container container-center">
+        <article class="container bg-change">
           <h3>'Do you really know me?' Quiz</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark01 NeoGCamp</strong></small>
@@ -306,20 +307,20 @@
             <span> <strong>Tech stack :</strong> </span>
             Built with <strong>nodeJs</strong>.
           </p>
-          <div class="live-project-btn">
+          <div >
             <a
               href="https://replit.com/@RishikeshShinde/Do-you-know-me#index.js?embed=1&output=1"
-              ><button>Live Project</button></a
+              ><button class="live-project-btn">Live Project</button></a
             >
           </div>
-          <div class="source-code-btn">
+          <div >
             <a href="https://github.com/rdshinde/javascript-cli-quiz-1.git"
-              ><button>Source Code</button></a
+              ><button class="source-code-btn">Source Code</button></a
             >
           </div>
         </article>
         <!-- Fun Translations -->
-        <article class="container container-center">
+        <article class="container normal-bg">
           <h3>Fun Translator</h3>
           <small>August, 2021</small><br />
           <small><strong>Minion,Yoda and Shakespere Translator</strong></small>
@@ -329,19 +330,19 @@
             Built with <strong>HTML</strong>,<strong> CSS</strong> and
             <strong>Vanilla JS</strong>.
           </p>
-          <div class="live-project-btn">
+          <div >
             <a href="https://rdshinde.github.io/fun_translator/"
-              ><button>Live Project</button></a
+              ><button class="live-project-btn">Live Project</button></a
             >
           </div>
-          <div class="source-code-btn">
+          <div >
             <a href="https://github.com/rdshinde/fun_translator.git"
-              ><button>Source Code</button></a
+              ><button class="source-code-btn">Source Code</button></a
             >
           </div>
         </article>
         <!-- Rock Paper Scissors -->
-        <article class="container container-center">
+        <article class="container bg-change">
           <h3>Rock Paper Scissors</h3>
           <small>June, 2021</small><br />
           <small><strong>Rock-Paper-Scissors Game</strong></small>
@@ -351,14 +352,14 @@
             Built with <strong>HTML</strong>,<strong> CSS</strong> and
             <strong>Vanilla JS</strong>.
           </p>
-          <div class="live-project-btn">
+          <div >
             <a href="https://rockpaperscissorslive.netlify.app/"
-              ><button>Live Project</button></a
+              ><button class="live-project-btn">Live Project</button></a
             >
           </div>
-          <div class="source-code-btn">
+          <div >
             <a href="https://github.com/rdshinde/rock-paper-scissors.git"
-              ><button>Source Code</button></a
+              ><button class="source-code-btn">Source Code</button></a
             >
           </div>
         </article>
