--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <section class="bg-change">
           <div  >
               <h3>My Projects</h3>
-              <p>I have coded some pretty interesting <strong>web apps</strong> . I would like to show you those apps. I have showcased them on <a href="/project.html"><strong>project</strong></a> page. Please feel free to comment on my projects by contacting me.</p>
+              <p>I have coded some pretty interesting <strong>web apps</strong> . I would like to show you those apps. I have showcased them on <a href="/project.html"><strong>project</strong></a> page. Please feel free to comment on my projects on github.</p>
           </div>
           <div><a href="/project.html"><button>Go to Projects</button></a></div>
       </section>
