append:favicon added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href='https://fonts.googleapis.com/css?family=Andada&effect=shadow-multiple' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="/assets/portfolio.png" type="image/x-icon">
     <title>Rishikesh Shinde</title>
   </head>
   <body>
