--- a/project.html
+++ b/project.html
@@ -7,7 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Andada' rel='stylesheet'>
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="/assets/portfolio.png" type="image/x-icon">
-    <title>Rishikesh Shinde</title>
+    <title>Rishikesh Shinde | Projects</title>
   </head>
   <body>
     <header>
