--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <h3>
                   My Blogs
               </h3>
-              <p>I also like to write blogs on technical as well as non-technical things. In technical blogs I like to share my technical learnings and experiences on various project.</p>
+              <p>I also like to write blogs on technical as well as non-technical things. In technical blogs I like to share my learnings and experiences on various project.</p>
           </div>
           <div class="blog-btn">
               <a href="/blog.html"><button>Read Blogs</button></a>
