--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <h1>Rishikesh Shinde</h1>
+      <a href="/index.html"><h1>Rishikesh Shinde</h1></a>
       <nav>
         <ul>
           <li><a href="/index.html">Home</a></li>
