append: onscroll transition added

--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header>
-      <a href="/index.html"><h1>Rishikesh Shinde</h1></a>
+      <a href="/index.html"></a><h1>Rishikesh Shinde</h1></a>
       <nav>
         <ul>
           <li><a href="/index.html">Home</a></li>
@@ -31,7 +31,7 @@
       <section>
         <div>
           <img
-            class="head-img"
+            class="hero-img show-on-scroll"
             src="/assets/blog-hero.svg"
             width="400"
             alt="deveoper-img"
@@ -41,7 +41,7 @@
       </section>
       <!-- Adding Blogs -->
 
-      <section class="bg-change">
+      <section class="bg-change show-on-scroll">
         <article class="">
           <h3>What is DOM and DOM manipulation?</h3>
           <small>August, 2021</small><br />
@@ -91,5 +91,6 @@
         </span>
       </div>
     </footer>
+    <script src="/main.js"></script>
   </body>
 </html>
