--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
       <section >
         <div >
           <img
-          class="head-img"
+          class="hero-img show-on-scroll"
             src="/assets/home-hero.svg"
             width="500"
             alt="deveoper-img"
           />
           <h2>
-            Hello, I am <span> Rishikesh Shinde</span>. <br />
-            The aspiring <span>Web App Developer.</span>
+            Hello, I am <span  > Rishikesh Shinde</span>. <br />
+            The aspiring <span  >Web App Developer.</span>
           </h2>
         </div>
-        <div  class="bg-change">
+        <div  class="bg-change show-on-scroll">
           <h3>About</h3>
           <p>
             I am <strong> 3<sup>rd</sup> year Computer Engineering</strong> aspirant. A person who
@@ -43,11 +43,11 @@
           </p>
         </div>
       </section>
-      <section class="normal-bg">
+      <section class="normal-bg show-on-scroll">
         <h3>Technologies I know.</h3>
         <div class="skills">
             <p>Here I have listed some of the technologies I am familiar with, most of them are related to <strong>Web Development</strong>  field.</p>
-          <div class="technologies-logos">
+          <div class="technologies-logos show-on-scroll">
             <div class="c++ logo">
               <img class="logo-img" src="/assets/icons8-c++.svg" alt="c++-logo" />
               <figcaption>C++</figcaption>
@@ -84,19 +84,19 @@
           </div>
         </div></div>
       </section>
-      <section class="bg-change">
+      <section class="bg-change show-on-scroll">
           <div  >
               <h3>My Projects</h3>
-              <p>I have coded some pretty interesting <strong>web apps</strong> . I would like to show you those apps. I have showcased them on <a href="/project.html"><strong>project</strong></a> page. Please feel free to comment on my projects on github.</p>
+              <p class="show-on-scroll">I have coded some pretty interesting <strong>web apps</strong> . I would like to show you those apps. I have showcased them on <a href="/project.html"><strong>project</strong></a> page. Please feel free to comment on my projects on github.</p>
           </div>
           <div><a href="/project.html"><button>Go to Projects</button></a></div>
       </section>
-      <section class="normal-bg">
+      <section class="normal-bg show-on-scroll">
           <div class="blogs">
               <h3>
                   My Blogs
               </h3>
-              <p>I also like to write blogs on technical as well as non-technical things. In technical blogs I like to share my learnings and experiences on various project.</p>
+              <p class="show-on-scroll">I also like to write blogs on technical as well as non-technical things. In technical blogs I like to share my learnings and experiences on various project.</p>
           </div>
           <div class="blog-btn">
               <a href="/blog.html"><button>Read Blogs</button></a>
@@ -136,5 +136,6 @@
         /></a>
       </span></div>
     </footer>
+    <script src="/main.js"></script>
   </body>
 </html>
