--- a/project.html
+++ b/project.html
@@ -23,15 +23,15 @@
     <main>
       <section>
         <div class="project-intro">
-          <div class="hero-img">
-            <img src="/assets/project-hero.svg" width="375" alt="project-img" />
+          <div >
+            <img src="/assets/project-hero.svg" class="hero-img show-on-scroll" width="375" alt="project-img" />
           </div>
           <h2>Here are my <span>Projects</span>.</h2>
         </div>
       </section>
       <section>
         <!-- Profit Loss Calculator -->
-        <article class="bg-change">
+        <article class="bg-change show-on-scroll">
           <h3>Stockecker (Stock's Position Checker )</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark14 NeoGCamp</strong></small>
@@ -60,7 +60,7 @@
           </div>
         </article>
         <!-- Is your birthday palindrome? -->
-        <article class="container normal-bg">
+        <article class="container normal-bg show-on-scroll">
           <h3>Is your Birthday a Palindrome?</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark13 NeoGCamp</strong></small>
@@ -87,7 +87,7 @@
           </div>
         </article>
         <!-- Fun with Triangles -->
-        <article class="container bg-change">
+        <article class="container bg-change show-on-scroll">
           <h3>Fun With Triangles?</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark12 NeoGCamp</strong></small>
@@ -115,7 +115,7 @@
           </div>
         </article>
         <!-- Is your birthdate lucky? -->
-        <article class="container normal-bg">
+        <article class="container normal-bg show-on-scroll">
           <h3>Is your Birthdate Lucky?</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark11 NeoGCamp</strong></small>
@@ -143,7 +143,7 @@
           </div>
         </article>
         <!-- cash counter -->
-        <article class="container bg-change">
+        <article class="container bg-change show-on-scroll">
           <h3>Cash Counter</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark10 NeoGCamp</strong></small>
@@ -169,7 +169,7 @@
           </div>
         </article>
         <!-- Maharshtrian Food Recommendation -->
-        <article class="container normal-bg">
+        <article class="container normal-bg show-on-scroll">
           <h3>Maharshtrian Food Recommendation</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark09 NeoGCamp</strong></small>
@@ -193,7 +193,7 @@
           </div>
         </article>
         <!-- Emoji Interpreter -->
-        <article class="container bg-change">
+        <article class="container bg-change show-on-scroll">
           <h3>Hand Gesture Emoji Interpreter</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark08 NeoGCamp</strong></small>
@@ -216,7 +216,7 @@
           </div>
         </article>
         <!-- Yoda Translations -->
-        <article class="container normal-bg">
+        <article class="container normal-bg show-on-scroll">
           <h3>Yoda Translator</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark07 NeoGCamp</strong></small>
@@ -242,7 +242,7 @@
           </div>
         </article>
         <!-- Minion Translations -->
-        <article class="container bg-change">
+        <article class="container bg-change show-on-scroll">
           <h3>Minion Translator</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark06 NeoGCamp</strong></small>
@@ -269,7 +269,7 @@
           </div>
         </article>
         <!-- Avenger Movies Quiz -->
-        <article class="container normal-bg">
+        <article class="container normal-bg show-on-scroll">
           <h3>'Avenger Movies' Quiz</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark02 NeoGCamp</strong></small>
@@ -295,7 +295,7 @@
           </div>
         </article>
         <!-- Do you really know me? -->
-        <article class="container bg-change">
+        <article class="container bg-change show-on-scroll">
           <h3>'Do you really know me?' Quiz</h3>
           <small>August, 2021</small><br />
           <small><strong>#mark01 NeoGCamp</strong></small>
@@ -321,7 +321,7 @@
           </div>
         </article>
         <!-- Fun Translations -->
-        <article class="container normal-bg">
+        <article class="container normal-bg show-on-scroll">
           <h3>Fun Translator</h3>
           <small>August, 2021</small><br />
           <small><strong>Minion,Yoda and Shakespere Translator</strong></small>
@@ -343,7 +343,7 @@
           </div>
         </article>
         <!-- Rock Paper Scissors -->
-        <article class="container bg-change">
+        <article class="container bg-change show-on-scroll">
           <h3>Rock Paper Scissors</h3>
           <small>June, 2021</small><br />
           <small><strong>Rock-Paper-Scissors Game</strong></small>
@@ -400,5 +400,6 @@
         </span>
       </div>
     </footer>
+    <script src="/main.js"></script>
   </body>
 </html>
