--- a/blog.html
+++ b/blog.html
@@ -14,11 +14,11 @@
       href="/assets/portfolio.png"
       type="image/x-icon"
     />
-    <title>Rishikesh Shinde</title>
+    <title>Rishikesh Shinde | Blogs</title>
   </head>
   <body>
     <header>
-      <a href="/index.html"></a><h1>Rishikesh Shinde</h1></a>
+      <a href="/index.html"><h1>Rishikesh Shinde</h1></a>
       <nav>
         <ul>
           <li><a href="/index.html">Home</a></li>
