--- a/blog.html
+++ b/blog.html
@@ -40,11 +40,25 @@
         </div>
       </section>
       <!-- Adding Blogs -->
-
+      <section class="normal-bg show-on-scroll">
+        <article>
+          <h3>How to define JavaScript?</h3>
+          <small>September, 2021</small><br />
+          🕑 : <small><strong>7 min read</strong></small>
+          <p>
+            On the internet, we come across many definitions of JavaScript. But today we are going to define JavaScript differently.
+          </p>
+          <a
+            href="https://firsteverblogs.hashnode.dev/how-do-we-define-javascript"
+            ><button class="source-code-btn">Read More</button></a
+          >
+        </article>
+      </section>
+<!-- Second Blog -->
       <section class="bg-change show-on-scroll">
-        <article class="">
+        <article>
           <h3>What is DOM and DOM manipulation?</h3>
-          <small>August, 2021</small><br />
+          <small>September, 2021</small><br />
           🕑 : <small><strong>4 min read</strong></small>
           <p>
             Before we see why the DOM manipulation is not a javascript. Let's
