append:portfolio link added

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </main>
     <footer>
         <h4>Connect with me here.</h4>
-        <a href="#">Rishikesh Shinde</a><br />
+        <a href="https://rishikeshshinde.netlify.app/">Rishikesh Shinde</a><br />
         <div class="social-media-icons">
       <!-- Social Media Icons  -->
       <span class="social-media">
