--- a/blog.html
+++ b/blog.html
@@ -54,8 +54,23 @@
           >
         </article>
       </section>
-<!-- Second Blog -->
+      <!-- Second Blog -->
       <section class="normal-bg show-on-scroll">
+        <article>
+          <h3>What is the difference between == and === in JavaScript?</h3>
+          <small>September, 2021</small><br />
+          🕑 : <small><strong>4 min read</strong></small>
+          <p>
+            Many times people coming from a different programming language background get confused between == and === operators that we use in JavaScript. This also happens with != and !== operators also. So by the end of this post, you will be able to explain the difference between these operators. So let's get started.
+          </p>
+          <a
+            href="https://firsteverblogs.hashnode.dev/equality-oprators-in-javascript"
+            ><button class="source-code-btn">Read More</button></a
+          >
+        </article>
+      </section>
+<!-- Third Blog -->
+      <section class="bg-change show-on-scroll">
         <article>
           <h3>What is DOM and DOM manipulation?</h3>
           <small>September, 2021</small><br />
