--- a/project.html
+++ b/project.html
@@ -320,6 +320,29 @@
             >
           </div>
         </article>
+        <!-- Apple Store -->
+        <!-- Rock Paper Scissors -->
+        <article class="container bg-change show-on-scroll">
+          <h3>Online Shopping App with Vanilla Javascript</h3>
+          <small>September, 2021</small><br />
+          <small><strong>Online Apple Store</strong></small>
+          <p>Want to find some apple products online? This app can show you some Apple products. It is build with vanilla javascript and cloud firestore database. Checkout some interesting features of it by clicking on live project.</p>
+          <p>
+            <span> <strong>Tech stack :</strong> </span>
+            Built with <strong>HTML</strong>,<strong> CSS</strong> ,
+            <strong>Vanilla JS</strong>,<strong>Cloud Firestore</strong>.
+          </p>
+          <div >
+            <a href="https://rdshinde.github.io/apple-store"
+              ><button class="live-project-btn">Live Project</button></a
+            >
+          </div>
+          <div >
+            <a href="https://github.com/rdshinde/apple-store.git"
+              ><button class="source-code-btn">Source Code</button></a
+            >
+          </div>
+        </article>
         <!-- Fun Translations -->
         <article class="container normal-bg show-on-scroll">
           <h3>Fun Translator</h3>
